--- a/app/webroot/css/style-admin.scss
+++ b/app/webroot/css/style-admin.scss
@@ -13,6 +13,10 @@ h2 {
 	font-weight: normal;
 	font-size: 1.4em;
 }
+h3 {
+	font-weight: normal;
+	font-size: 1.3em;
+}
 ul {
 	list-style: none;
 }
@@ -31,27 +35,27 @@ ul {
 	text-align: center;
 }
 
-label {
-	display: inline-block;
-	width: 10%;
-	text-align: right;
-	margin-right: 1%;
-}
-.input {
-	margin: 10px 0;
-	input {
-		padding: 5px;
-		border-radius: 3px;
-		border: 1px solid #B9B9B9;
-		height: 35px;
-		width: 200px;
-		display: inline-block;
-		font-size: 0.8em;
-	}
-	select {
-		width: 200px;
-	}
-}
+// label {
+// 	display: inline-block;
+// 	width: 10%;
+// 	text-align: right;
+// 	margin-right: 1%;
+// }
+// .input {
+// 	margin: 10px 0;
+// 	input {
+// 		padding: 5px;
+// 		border-radius: 3px;
+// 		border: 1px solid #B9B9B9;
+// 		height: 35px;
+// 		width: 200px;
+// 		display: inline-block;
+// 		font-size: 0.8em;
+// 	}
+// 	select {
+// 		width: 200px;
+// 	}
+// }
 
 #container {
 	background-image: url(../img/bg_admin.jpg);
@@ -135,7 +139,7 @@ label {
 				height: 90.4%;
 				overflow: auto;
 				#wrapper_content_admin {
-					width: 97%;
+					width: 90%;
 					margin: 0px auto;
 					padding-top: 7px;
 					font-size: .9em;
@@ -184,11 +188,16 @@ label {
 	}
 }
 
+
+// PAGE ACCUEIL ADMIN
 #wrapper_stats {
-	float: left;
+	display: inline-block;
+	vertical-align: top;
+	width: 70%;
 }
 #block_links {
-	float: right;
+	display: inline-block;
+	vertical-align: top;
 	width: 30%;
 	border-left: 1px solid #CCC;
 	padding: 0 10px;
@@ -215,4 +224,8 @@ label {
 }
 .defaultSimpleSkin {
 	display: inline-block;
+}
+
+#list_annexes {
+	list-style-type: circle;
 }
